--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line Between Activities</title>
+    <title>Curved Dotted Line with Bézier</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,6 +73,14 @@
             height: 60px;
         }
 
+        /* Linha curva mais grossa e pontilhada */
+        svg path {
+            fill: none;
+            stroke: red;
+            stroke-width: 8; /* Linha mais grossa */
+            stroke-dasharray: 15; /* Linha pontilhada */
+        }
+
         /* Responsividade */
         @media (min-width: 1024px) {
             .phase img {
@@ -108,14 +116,6 @@
                 width: 40px;
                 height: 40px;
             }
-        }
-
-        /* Estilo da linha curva pontilhada */
-        svg path {
-            fill: none;
-            stroke: red;
-            stroke-width: 4;
-            stroke-dasharray: 10; /* Define a linha pontilhada */
         }
     </style>
 </head>
@@ -175,7 +175,19 @@
                 const x = (leftValue / 100) * mapContainer.clientWidth;
                 const y = (topValue / 100) * mapContainer.clientHeight;
 
-                pathD += `${index === 0 ? 'M' : 'L'} ${x},${y} `; // "M" para o primeiro ponto, "L" para os outros
+                if (index === 0) {
+                    pathD += `M ${x},${y} `; // "M" para o primeiro ponto
+                } else {
+                    const prevActivity = activities[index - 1];
+                    const prevTopValue = parseFloat(prevActivity.top);
+                    const prevLeftValue = parseFloat(prevActivity.left);
+                    const prevX = (prevLeftValue / 100) * mapContainer.clientWidth;
+                    const prevY = (prevTopValue / 100) * mapContainer.clientHeight;
+
+                    // Bézier curva entre os pontos
+                    const controlX = (prevX + x) / 2; // Ponto de controle no meio da linha
+                    pathD += `C ${controlX},${prevY} ${controlX},${y} ${x},${y} `;
+                }
             });
 
             // Adiciona o caminho ao SVG
