--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Bézier</title>
+    <title>Curved Dotted Line with More Spacing</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -128,11 +128,11 @@
     <script>
         const activities = [
             { id: 1, name: "Activity 1", top: '10%', left: '10%', locked: false, image: 'botoes/storycards_button.png', link: '../unidade2/StoryCards/index.html' },
-            { id: 2, name: "Activity 2", top: '30%', left: '20%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
-            { id: 3, name: "Activity 3", top: '50%', left: '35%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
-            { id: 4, name: "Activity 4", top: '70%', left: '45%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
-            { id: 5, name: "Activity 5", top: '85%', left: '65%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
-            { id: 6, name: "Activity 6", top: '70%', left: '80%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
+            { id: 2, name: "Activity 2", top: '25%', left: '25%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
+            { id: 3, name: "Activity 3", top: '50%', left: '45%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
+            { id: 4, name: "Activity 4", top: '70%', left: '60%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
+            { id: 5, name: "Activity 5", top: '85%', left: '75%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
+            { id: 6, name: "Activity 6", top: '65%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
         // Função para gerar as fases e a linha curva
