--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with More Spacing</title>
+    <title>Curved Dotted Line with Title</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,6 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             height: 100vh;
         }
 
@@ -22,6 +23,14 @@
             background-size: cover;
             position: relative;
             filter: brightness(0.9); /* Leve escurecimento do fundo */
+        }
+
+        .title {
+            text-align: center;
+            font-size: 36px;
+            font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
+            color: #333;
+            margin-bottom: 20px;
         }
 
         .phase {
@@ -120,6 +129,8 @@
     </style>
 </head>
 <body>
+    <div class="title">Hannah English Course</div>
+
     <div class="map-container" id="mapContainer">
         <!-- Aqui serão geradas as fases e o bonequinho -->
         <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
