--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Title</title>
+    <title>Curved Dotted Line with Larger Circles</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,13 +47,13 @@
         }
 
         .phase img {
-            width: 80px;
-            height: 80px;
+            width: 100%; /* O tamanho da imagem será ajustado pelo contêiner da fase */
+            height: 100%;
             border-radius: 50%;
         }
 
         .phase:hover {
-            transform: scale(1.1);
+            transform: scale(1.5); /* Ampliação maior no hover */
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra mais forte ao hover */
         }
 
@@ -92,9 +92,9 @@
 
         /* Responsividade */
         @media (min-width: 1024px) {
-            .phase img {
-                width: 80px;
-                height: 80px;
+            .phase {
+                width: 100px;
+                height: 100px;
             }
 
             .character img {
@@ -104,9 +104,9 @@
         }
 
         @media (min-width: 600px) and (max-width: 1023px) {
-            .phase img {
-                width: 60px;
-                height: 60px;
+            .phase {
+                width: 130px;
+                height: 130px;
             }
 
             .character img {
@@ -116,9 +116,9 @@
         }
 
         @media (max-width: 599px) {
-            .phase img {
-                width: 50px;
-                height: 50px;
+            .phase {
+                width: 150px;
+                height: 150px;
             }
 
             .character img {
@@ -132,7 +132,6 @@
     <div class="title">Hannah English Course</div>
 
     <div class="map-container" id="mapContainer">
-        <!-- Aqui serão geradas as fases e o bonequinho -->
         <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
     </div>
 
@@ -151,6 +150,7 @@
             const mapContainer = document.getElementById('mapContainer');
             const lineContainer = document.getElementById('lineContainer');
 
+            lineContainer.innerHTML = ''; // Limpar qualquer linha anterior ao redesenhar
             let pathD = ''; // Caminho para o atributo "d" do SVG
 
             activities.forEach((activity, index) => {
@@ -250,6 +250,11 @@
 
         // Chama a função ao carregar a página
         window.onload = generatePhases;
+
+        // Redesenhar linhas ao redimensionar a janela
+        window.onresize = function() {
+            generatePhases();
+        };
     </script>
 </body>
 </html>
