--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Larger Circles</title>
+    <title>Curved Dotted Line with Larger Circles and Character</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -78,8 +78,8 @@
         }
 
         .character img {
-            width: 60px;
-            height: 60px;
+            width: 100%;
+            height: 100%;
         }
 
         /* Linha curva mais grossa e pontilhada */
@@ -97,9 +97,9 @@
                 height: 100px;
             }
 
-            .character img {
-                width: 60px;
-                height: 60px;
+            .character {
+                width: 80px;
+                height: 80px;
             }
         }
 
@@ -109,9 +109,9 @@
                 height: 130px;
             }
 
-            .character img {
-                width: 50px;
-                height: 50px;
+            .character {
+                width: 90px;
+                height: 90px;
             }
         }
 
@@ -121,9 +121,9 @@
                 height: 150px;
             }
 
-            .character img {
-                width: 40px;
-                height: 40px;
+            .character {
+                width: 120px;
+                height: 120px;
             }
         }
     </style>
