--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Larger Circles and Character</title>
+    <title>Curved Dotted Line with Delayed Link</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -170,9 +170,8 @@
 
                 phaseDiv.addEventListener('click', function () {
                     if (!activity.locked) {
-                        moveCharacterToPhase(index); 
+                        moveCharacterToPhase(index, activity.link); 
                         unlockNextPhase(index); 
-                        window.location.href = activity.link; 
                     } else {
                         alert('This phase is locked.');
                     }
@@ -227,15 +226,21 @@
             document.getElementById('mapContainer').appendChild(character);
         }
 
-        // Função para mover o bonequinho
-        function moveCharacterToPhase(phaseIndex) {
+        // Função para mover o bonequinho e abrir o link após o movimento
+        function moveCharacterToPhase(phaseIndex, link) {
             if (phaseIndex >= activities.length) return;
 
             const character = document.getElementById('gameCharacter');
             const targetPhase = activities[phaseIndex];
 
+            // Move o bonequinho até a nova fase
             character.style.top = targetPhase.top;
             character.style.left = targetPhase.left;
+
+            // Após 1 segundo (o tempo do movimento), abre o link da fase
+            setTimeout(() => {
+                window.location.href = link;
+            }, 1000); // Ajuste esse tempo se necessário, conforme a velocidade do movimento
         }
 
         // Função para desbloquear a próxima fase
