--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Delayed Link</title>
+    <title>Curved Dotted Line with Blurred Background</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,17 +14,35 @@
             align-items: center;
             flex-direction: column;
             height: 100vh;
+            overflow: hidden; /* Evitar rolagem */
         }
 
+        /* Map Container */
         .map-container {
-            width: 90%;
-            height: 80vh;
-            background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
-            background-size: cover;
+            width: 100%;
+            height: 100%;
             position: relative;
-            filter: brightness(0.9); /* Leve escurecimento do fundo */
+            background-size: cover;
+            background-position: center;
+            filter: blur(8px); /* Efeito de desfoque */
+            background-image: url('../../imagens/map_background.png'); /* Substitua pelo caminho correto da imagem */
         }
 
+        /* Overlay que contém as atividades, título e o bonequinho */
+        .overlay-container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 1; /* Colocar o overlay acima do fundo */
+        }
+
+        /* Título */
         .title {
             text-align: center;
             font-size: 36px;
@@ -33,6 +51,7 @@
             margin-bottom: 20px;
         }
 
+        /* Círculos das atividades */
         .phase {
             position: absolute;
             display: flex;
@@ -72,6 +91,7 @@
             z-index: 2;
         }
 
+        /* Bonequinho */
         .character {
             position: absolute;
             transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
@@ -129,10 +149,17 @@
     </style>
 </head>
 <body>
-    <div class="title">Hannah English Course</div>
 
-    <div class="map-container" id="mapContainer">
-        <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
+    <!-- Mapa com desfoque -->
+    <div class="map-container"></div>
+
+    <!-- Overlay que contém as atividades e o bonequinho -->
+    <div class="overlay-container">
+        <div class="title">Hannah English Course</div>
+
+        <div id="mapContainer">
+            <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
+        </div>
     </div>
 
     <script>
@@ -233,14 +260,14 @@
             const character = document.getElementById('gameCharacter');
             const targetPhase = activities[phaseIndex];
 
-            // Move o bonequinho até a nova fase
+            // Mover o bonequinho para a nova posição
             character.style.top = targetPhase.top;
             character.style.left = targetPhase.left;
 
-            // Após 1 segundo (o tempo do movimento), abre o link da fase
+            // Abrir o link da atividade após o movimento (tempo calculado com base no CSS transition de 1s)
             setTimeout(() => {
                 window.location.href = link;
-            }, 1000); // Ajuste esse tempo se necessário, conforme a velocidade do movimento
+            }, 1000); // 1000ms = 1 segundo (mesmo tempo da animação)
         }
 
         // Função para desbloquear a próxima fase
