--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Blurred Background</title>
+    <title>Curved Dotted Line with Blurred Background and Space for Title</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -10,36 +10,21 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
             flex-direction: column;
             height: 100vh;
             overflow: hidden; /* Evitar rolagem */
         }
 
-        /* Map Container */
-        .map-container {
+        /* Espaço vazio para o título */
+        .header {
             width: 100%;
-            height: 100%;
-            position: relative;
-            background-size: cover;
-            background-position: center;
-            filter: blur(8px); /* Efeito de desfoque */
-            background-image: url('../../imagens/map_background.png'); /* Substitua pelo caminho correto da imagem */
-        }
-
-        /* Overlay que contém as atividades, título e o bonequinho */
-        .overlay-container {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
+            height: 15%;
+            background-color: white; /* Espaço em branco */
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            z-index: 1; /* Colocar o overlay acima do fundo */
+            position: relative;
+            z-index: 2; /* Para garantir que fique sobre o fundo */
         }
 
         /* Título */
@@ -48,7 +33,32 @@
             font-size: 36px;
             font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
             color: #333;
-            margin-bottom: 20px;
+            margin: 0;
+        }
+
+        /* Map Container */
+        .map-container {
+            width: 100%;
+            height: 85%; /* O fundo ocupa o restante do espaço */
+            position: relative;
+            background-size: cover;
+            background-position: center;
+            filter: blur(4px); /* Efeito de desfoque reduzido */
+            background-image: url('../../imagens/map_background.png'); /* Substitua pelo caminho correto da imagem */
+        }
+
+        /* Overlay que contém as atividades e o bonequinho */
+        .overlay-container {
+            position: absolute;
+            width: 100%;
+            height: 85%;
+            top: 15%; /* Começa onde o mapa começa */
+            left: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 1; /* Colocar o overlay acima do fundo */
         }
 
         /* Círculos das atividades */
@@ -150,13 +160,16 @@
 </head>
 <body>
 
+    <!-- Espaço em branco para o título -->
+    <div class="header">
+        <div class="title">Hannah English Course</div>
+    </div>
+
     <!-- Mapa com desfoque -->
     <div class="map-container"></div>
 
     <!-- Overlay que contém as atividades e o bonequinho -->
     <div class="overlay-container">
-        <div class="title">Hannah English Course</div>
-
         <div id="mapContainer">
             <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
         </div>
