--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -29,14 +29,13 @@
 
         /* Título */
         .title {
-            text-align: center;
             font-size: 36px;
             font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
             color: #333;
             margin: 0;
         }
 
-        /* Map Container */
+        /* Mapa de fundo com desfoque */
         .map-container {
             width: 100%;
             height: 85%; /* O fundo ocupa o restante do espaço */
