--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Blurred Background and Space for Title</title>
+    <title>Curved Dotted Line with Blurred Background and Delayed Link</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -10,57 +10,30 @@
             margin: 0;
             padding: 0;
             display: flex;
-            flex-direction: column;
-            height: 100vh;
-            overflow: hidden; /* Evitar rolagem */
-        }
-
-        /* Espaço vazio para o título */
-        .header {
-            width: 100%;
-            height: 15%;
-            background-color: white; /* Espaço em branco */
-            display: flex;
             justify-content: center;
             align-items: center;
-            position: relative;
-            z-index: 2; /* Para garantir que fique sobre o fundo */
+            flex-direction: column;
+            height: 100vh;
         }
 
-        /* Título */
+        .map-container {
+            width: 90%;
+            height: 80vh;
+            background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            filter: blur(4px) brightness(0.9); /* Aplicando o desfoque (blur) e um leve escurecimento */
+        }
+
         .title {
+            text-align: center;
             font-size: 36px;
             font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
             color: #333;
-            margin: 0;
+            margin-bottom: 20px;
         }
 
-        /* Mapa de fundo com desfoque */
-        .map-container {
-            width: 100%;
-            height: 85%; /* O fundo ocupa o restante do espaço */
-            position: relative;
-            background-size: cover;
-            background-position: center;
-            filter: blur(4px); /* Efeito de desfoque reduzido */
-            background-image: url('../../imagens/map_background.png'); /* Substitua pelo caminho correto da imagem */
-        }
-
-        /* Overlay que contém as atividades e o bonequinho */
-        .overlay-container {
-            position: absolute;
-            width: 100%;
-            height: 85%;
-            top: 15%; /* Começa onde o mapa começa */
-            left: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 1; /* Colocar o overlay acima do fundo */
-        }
-
-        /* Círculos das atividades */
         .phase {
             position: absolute;
             display: flex;
@@ -100,7 +73,6 @@
             z-index: 2;
         }
 
-        /* Bonequinho */
         .character {
             position: absolute;
             transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
@@ -158,20 +130,10 @@
     </style>
 </head>
 <body>
+    <div class="title">Hannah English Course</div>
 
-    <!-- Espaço em branco para o título -->
-    <div class="header">
-        <div class="title">Hannah English Course</div>
-    </div>
-
-    <!-- Mapa com desfoque -->
-    <div class="map-container"></div>
-
-    <!-- Overlay que contém as atividades e o bonequinho -->
-    <div class="overlay-container">
-        <div id="mapContainer">
-            <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
-        </div>
+    <div class="map-container" id="mapContainer">
+        <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
     </div>
 
     <script>
