--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Blurred Background and Delayed Link</title>
+    <title>Curved Dotted Line with Delayed Link and Blurred Background</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,6 +16,7 @@
             height: 100vh;
         }
 
+        /* Mapa de fundo com blur aplicado apenas na imagem */
         .map-container {
             width: 90%;
             height: 80vh;
@@ -23,7 +24,7 @@
             background-size: cover;
             background-position: center;
             position: relative;
-            filter: blur(4px) brightness(0.9); /* Aplicando o desfoque (blur) e um leve escurecimento */
+            filter: blur(4px); /* Efeito de desfoque apenas na imagem */
         }
 
         .title {
