--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -23,8 +23,17 @@
             background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
             background-size: cover;
             background-position: center;
-            position: relative;
+            position: absolute; /* O mapa agora está fixo no fundo */
             filter: blur(4px); /* Efeito de desfoque apenas na imagem */
+            z-index: 1; /* Para garantir que o fundo fique abaixo dos elementos */
+        }
+
+        /* Overlay para as atividades e bonequinho */
+        .overlay-container {
+            position: relative;
+            width: 90%;
+            height: 80vh;
+            z-index: 2; /* Os elementos estão acima do mapa */
         }
 
         .title {
@@ -133,7 +142,11 @@
 <body>
     <div class="title">Hannah English Course</div>
 
-    <div class="map-container" id="mapContainer">
+    <!-- Mapa de fundo -->
+    <div class="map-container"></div>
+
+    <!-- Overlay para atividades e bonequinho -->
+    <div class="overlay-container" id="mapContainer">
         <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
     </div>
 
