--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -10,20 +10,37 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
             flex-direction: column;
             height: 100vh;
         }
 
+        /* Espaço em branco para o título */
+        .header {
+            width: 100%;
+            height: 15%; /* Espaço reservado para o título */
+            background-color: white; /* Espaço branco */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 3; /* Certificar que o título fique acima de tudo */
+        }
+
+        .title {
+            font-size: 36px;
+            font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
+            color: #333;
+            margin: 0;
+        }
+
         /* Mapa de fundo com blur aplicado apenas na imagem */
         .map-container {
-            width: 90%;
-            height: 80vh;
+            width: 100%;
+            height: 85%; /* Ocupa o restante do espaço */
             background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
-            background-size: cover;
-            background-position: center;
-            position: absolute; /* O mapa agora está fixo no fundo */
+            background-size: cover; /* Faz a imagem ocupar todo o espaço disponível sem distorção */
+            background-position: center; /* Centraliza a imagem de fundo */
+            position: absolute;
+            top: 15%; /* Colocar logo abaixo do header */
             filter: blur(4px); /* Efeito de desfoque apenas na imagem */
             z-index: 1; /* Para garantir que o fundo fique abaixo dos elementos */
         }
@@ -31,17 +48,10 @@
         /* Overlay para as atividades e bonequinho */
         .overlay-container {
             position: relative;
-            width: 90%;
-            height: 80vh;
+            width: 100%;
+            height: 85%; /* Mesma altura da imagem de fundo */
+            top: 15%; /* Mesma altura da imagem */
             z-index: 2; /* Os elementos estão acima do mapa */
-        }
-
-        .title {
-            text-align: center;
-            font-size: 36px;
-            font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
-            color: #333;
-            margin-bottom: 20px;
         }
 
         .phase {
@@ -140,7 +150,10 @@
     </style>
 </head>
 <body>
-    <div class="title">Hannah English Course</div>
+    <!-- Espaço em branco com o título -->
+    <div class="header">
+        <h1 class="title">Hannah English Course</h1>
+    </div>
 
     <!-- Mapa de fundo -->
     <div class="map-container"></div>
