--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -37,9 +37,10 @@
             width: 100%;
             height: 85%; /* Ocupa o restante do espaço */
             background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
-            background-size: cover; /* Faz a imagem ocupar todo o espaço disponível sem distorção */
-            background-position: center; /* Centraliza a imagem de fundo */
-            position: relative; /* Corrigir o overflow */
+            background-size: contain; /* Ajusta a imagem para caber totalmente na tela */
+            background-position: center; /* Centraliza a imagem */
+            background-repeat: no-repeat; /* Evitar repetição da imagem */
+            position: relative;
             filter: blur(4px); /* Efeito de desfoque apenas na imagem */
             z-index: 1; /* Para garantir que o fundo fique abaixo dos elementos */
         }
