--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Delayed Link and Blurred Background</title>
+    <title>Curved Dotted Line with Responsive Background</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,14 +32,14 @@
             margin: 0;
         }
 
-        /* Mapa de fundo com blur aplicado apenas na imagem */
+        /* Mapa de fundo com ajuste automático */
         .map-container {
             width: 100%;
             height: 85%; /* Ocupa o restante do espaço */
-            background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
-            background-size: contain; /* Ajusta a imagem para caber totalmente na tela */
-            background-position: center; /* Centraliza a imagem */
-            background-repeat: no-repeat; /* Evitar repetição da imagem */
+            background-image: url('../../imagens/map_background.png'); /* Mesma imagem para todas as telas */
+            background-size: contain; /* Ajusta a imagem conforme o tamanho da tela */
+            background-position: center; /* Centraliza a imagem de fundo */
+            background-repeat: no-repeat;
             position: relative;
             filter: blur(4px); /* Efeito de desfoque apenas na imagem */
             z-index: 1; /* Para garantir que o fundo fique abaixo dos elementos */
@@ -124,7 +124,7 @@
             }
         }
 
-        @media (min-width: 600px) and (max-width: 1023px) {
+        @media (max-width: 1023px) {
             .phase {
                 width: 130px;
                 height: 130px;
