--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -36,13 +36,13 @@
         .map-container {
             width: 100%;
             height: 85%; /* Ocupa o restante do espaço */
-            background-image: url('../../imagens/map_background.png'); /* Mesma imagem para todas as telas */
-            background-size: contain; /* Ajusta a imagem conforme o tamanho da tela */
-            background-position: center; /* Centraliza a imagem de fundo */
+            background-image: url('../../imagens/map_background.png');
+            background-size: cover; /* Garante que o fundo preencha todo o espaço */
+            background-position: center;
             background-repeat: no-repeat;
             position: relative;
             filter: blur(4px); /* Efeito de desfoque apenas na imagem */
-            z-index: 1; /* Para garantir que o fundo fique abaixo dos elementos */
+            z-index: 1;
         }
 
         /* Overlay para as atividades e bonequinho */
