--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -32,14 +32,14 @@
             margin: 0;
         }
 
-        /* Mapa de fundo com repetição de padrão pequeno */
+        /* Mapa de fundo com repetição de padrão proporcional */
         .map-container {
             width: 100%;
             height: 85%; /* Ajusta a altura conforme necessário */
             background-image: url('../../imagens/map_background.png'); /* Imagem de fundo */
-            background-size: 50px 50px; /* Faz a imagem ficar bem pequena e repetir */
-            background-position: center; /* Centraliza a imagem */
-            background-repeat: repeat; /* Repete a imagem tanto horizontalmente quanto verticalmente */
+            background-size: 341px 170px; /* Ajuste com base na proporção e largura desejada */
+            background-position: center;
+            background-repeat: repeat; /* Repetição horizontal e vertical */
             position: relative;
             z-index: 1;
         }
