--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -145,6 +145,11 @@
                 width: 120px;
                 height: 120px;
             }
+
+            /* Ajuste do tamanho da imagem de fundo para telas pequenas */
+            .map-container {
+                background-size: 512px 256px; /* Aumenta a imagem para celulares */
+            }
         }
     </style>
 </head>
