--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -110,31 +110,7 @@
             stroke-dasharray: 15; /* Linha pontilhada */
         }
 
-        /* Responsividade */
-        @media (min-width: 1024px) {
-            .phase {
-                width: 100px;
-                height: 100px;
-            }
-
-            .character {
-                width: 80px;
-                height: 80px;
-            }
-        }
-
-        @media (max-width: 1023px) {
-            .phase {
-                width: 130px;
-                height: 130px;
-            }
-
-            .character {
-                width: 90px;
-                height: 90px;
-            }
-        }
-
+        /* Ajustes para telas pequenas (celulares na vertical) */
         @media (max-width: 599px) {
             .phase {
                 width: 150px;
@@ -146,10 +122,23 @@
                 height: 120px;
             }
 
-            /* Ajuste do tamanho da imagem de fundo para telas pequenas */
             .map-container {
-                background-size: 512px 256px; /* Aumenta a imagem para celulares */
+                background-size: 546px 272px; /* Aumenta em 60% o tamanho da imagem de fundo */
             }
+        }
+
+        /* Para garantir que o fundo preencha toda a tela e elimine as áreas brancas */
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* Elimina rolagens */
+        }
+
+        .map-container {
+            background-size: 341px 170px;
+            background-position: center;
+            background-repeat: repeat;
+            background-attachment: fixed; /* Para garantir que preencha a tela */
         }
     </style>
 </head>
