--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -112,18 +112,33 @@
 
         /* Ajustes para telas pequenas (celulares na vertical) */
         @media (max-width: 599px) {
+            .map-container {
+                background-size: 546px 272px; /* Aumenta em 60% o tamanho da imagem de fundo */
+            }
+        }
+
+        /* Ajustes de responsividade para os círculos e bonequinho */
+        @media (min-width: 600px) {
             .phase {
-                width: 150px;
-                height: 150px;
+                width: 100px;
+                height: 100px;
             }
 
             .character {
-                width: 120px;
-                height: 120px;
+                width: 80px;
+                height: 80px;
+            }
+        }
+
+        @media (max-width: 599px) {
+            .phase {
+                width: 70px;
+                height: 70px;
             }
 
-            .map-container {
-                background-size: 546px 272px; /* Aumenta em 60% o tamanho da imagem de fundo */
+            .character {
+                width: 50px;
+                height: 50px;
             }
         }
 
