--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -115,6 +115,11 @@
             .map-container {
                 background-size: 546px 272px; /* Aumenta em 60% o tamanho da imagem de fundo */
             }
+
+            .phase {
+                width: 140px; /* Dobrar o tamanho dos círculos */
+                height: 140px; 
+            }
         }
 
         /* Ajustes de responsividade para os círculos e bonequinho */
@@ -125,20 +130,15 @@
             }
 
             .character {
-                width: 80px;
-                height: 80px;
+                width: 100px; /* Aumenta o tamanho do bonequinho em todas as situações */
+                height: 100px;
             }
         }
 
         @media (max-width: 599px) {
-            .phase {
-                width: 70px;
-                height: 70px;
-            }
-
             .character {
-                width: 50px;
-                height: 50px;
+                width: 120px; /* Aumenta o tamanho do bonequinho em todas as situações */
+                height: 120px;
             }
         }
 
