--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Responsive Background</title>
+    <title>Curved Dotted Line with Repeating Background</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,14 +32,13 @@
             margin: 0;
         }
 
-        /* Mapa de fundo com repetição de padrão proporcional */
+        /* Mapa de fundo repetido em ambas direções com aumento de tamanho */
         .map-container {
             width: 100%;
             height: 85%; /* Ajusta a altura conforme necessário */
-            background-image: url('../../imagens/map_background.png'); /* Imagem de fundo */
-            background-size: 341px 170px; /* Ajuste com base na proporção e largura desejada */
-            background-position: center;
-            background-repeat: repeat; /* Repetição horizontal e vertical */
+            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
+            background-repeat: repeat; /* Repetir a imagem em ambas direções */
+            background-size: 200%; /* Aumenta o tamanho da imagem de fundo */
             position: relative;
             z-index: 1;
         }
@@ -112,13 +111,14 @@
 
         /* Ajustes para telas pequenas (celulares na vertical) */
         @media (max-width: 599px) {
-            .map-container {
-                background-size: 546px 272px; /* Aumenta em 60% o tamanho da imagem de fundo */
-            }
-
             .phase {
                 width: 140px; /* Dobrar o tamanho dos círculos */
-                height: 140px; 
+                height: 140px;
+            }
+
+            .character {
+                width: 120px; /* Bonequinho maior */
+                height: 120px;
             }
         }
 
@@ -135,25 +135,11 @@
             }
         }
 
-        @media (max-width: 599px) {
-            .character {
-                width: 120px; /* Aumenta o tamanho do bonequinho em todas as situações */
-                height: 120px;
-            }
-        }
-
         /* Para garantir que o fundo preencha toda a tela e elimine as áreas brancas */
         html, body {
             width: 100%;
             height: 100%;
             overflow: hidden; /* Elimina rolagens */
-        }
-
-        .map-container {
-            background-size: 341px 170px;
-            background-position: center;
-            background-repeat: repeat;
-            background-attachment: fixed; /* Para garantir que preencha a tela */
         }
     </style>
 </head>
