--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -9,47 +9,41 @@
             background-color: #f4f4f9;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
             height: 100vh;
         }
 
-        /* Espaço em branco para o título */
-        .header {
+        /* Mapa de fundo ocupando toda a tela, inclusive o título */
+        .map-container {
             width: 100%;
-            height: 15%; /* Espaço reservado para o título */
-            background-color: white; /* Espaço branco */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 3; /* Certificar que o título fique acima de tudo */
+            height: 100vh; /* A imagem de fundo ocupa toda a tela */
+            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
+            background-repeat: repeat; /* Repetir a imagem em ambas direções */
+            background-size: 180%; /* Aumenta o tamanho da imagem de fundo */
+            position: relative;
         }
 
+        /* Título sobre a imagem de fundo */
         .title {
             font-size: 36px;
             font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
-            color: #333;
-            margin: 0;
-        }
-
-        /* Mapa de fundo repetido em ambas direções com aumento de tamanho */
-        .map-container {
-            width: 100%;
-            height: 85%; /* Ajusta a altura conforme necessário */
-            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
-            background-repeat: repeat; /* Repetir a imagem em ambas direções */
-            background-size: 50%; /* Aumenta o tamanho da imagem de fundo */
-            position: relative;
-            z-index: 1;
+            color: #fff; /* Cor branca para o texto do título */
+            text-align: center;
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 3;
+            background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente para o título */
+            padding: 10px 20px;
+            border-radius: 10px;
         }
 
         /* Overlay para atividades e bonequinho */
         .overlay-container {
-            position: absolute;
-            top: 15%; /* Mesma altura que o título */
+            position: relative;
             width: 100%;
-            height: 85%; /* Mesma altura da imagem de fundo */
-            z-index: 2; /* Os elementos estão acima do mapa */
+            height: 85%; /* Ajusta a altura conforme necessário */
+            z-index: 2;
         }
 
         .phase {
@@ -130,8 +124,8 @@
             }
 
             .character {
-                width: 100px; /* Aumenta o tamanho do bonequinho em todas as situações */
-                height: 100px;
+                width: 150px; /* Aumenta o tamanho do bonequinho em todas as situações */
+                height: 150px;
             }
         }
 
@@ -144,10 +138,8 @@
     </style>
 </head>
 <body>
-    <!-- Espaço em branco com o título -->
-    <div class="header">
-        <h1 class="title">Hannah English Course</h1>
-    </div>
+    <!-- Título sobre a imagem de fundo -->
+    <div class="title">Hannah English Course</div>
 
     <!-- Mapa de fundo -->
     <div class="map-container"></div>
