--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -18,7 +18,7 @@
             height: 100vh; /* A imagem de fundo ocupa toda a tela */
             background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
             background-repeat: repeat; /* Repetir a imagem em ambas direções */
-            background-size: 180%; /* Aumenta o tamanho da imagem de fundo */
+            background-size: 200%; /* Aumenta o tamanho da imagem de fundo */
             position: relative;
         }
 
@@ -88,11 +88,20 @@
         .character {
             position: absolute;
             transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
+            z-index: 2; /* Garante que o bonequinho fique abaixo dos círculos */
+        }
+
+        .character.above {
+            top: calc(100% - 30px); /* Posição acima do círculo */
+        }
+
+        .character.below {
+            top: calc(100% + 30px); /* Posição abaixo do círculo */
         }
 
         .character img {
-            width: 100%;
-            height: 100%;
+            width: 150px; /* Aumenta o tamanho do bonequinho */
+            height: 150px;
         }
 
         /* Linha curva mais grossa e pontilhada */
@@ -124,7 +133,7 @@
             }
 
             .character {
-                width: 150px; /* Aumenta o tamanho do bonequinho em todas as situações */
+                width: 150px; /* Aumenta o tamanho do bonequinho */
                 height: 150px;
             }
         }
@@ -234,7 +243,7 @@
             character.appendChild(characterImg);
 
             const firstPhase = activities[0];
-            character.style.top = firstPhase.top;
+            character.style.top = `calc(${firstPhase.top} - 50px)`; /* Posição acima da primeira fase */
             character.style.left = firstPhase.left;
 
             document.getElementById('mapContainer').appendChild(character);
@@ -247,8 +256,8 @@
             const character = document.getElementById('gameCharacter');
             const targetPhase = activities[phaseIndex];
 
-            // Mover o bonequinho para a nova posição
-            character.style.top = targetPhase.top;
+            // Mover o bonequinho para a nova posição acima ou abaixo do círculo
+            character.style.top = `calc(${targetPhase.top} - 50px)`; // Bonequinho ficará acima do círculo
             character.style.left = targetPhase.left;
 
             // Abrir o link da atividade após o movimento (tempo calculado com base no CSS transition de 1s)
