--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -20,6 +20,7 @@
             background-repeat: repeat; /* Repetir a imagem em ambas direções */
             background-size: 200%; /* Aumenta o tamanho da imagem de fundo */
             position: relative;
+            z-index: 1; /* Certifica que o fundo fique atrás de outros elementos */
         }
 
         /* Título sobre a imagem de fundo */
@@ -40,14 +41,14 @@
 
         /* Overlay para atividades e bonequinho */
         .overlay-container {
-            position: relative;
+            position: relative; /* Garantir que todos os elementos dentro sejam relativos a este contêiner */
             width: 100%;
             height: 85%; /* Ajusta a altura conforme necessário */
             z-index: 2;
         }
 
         .phase {
-            position: absolute;
+            position: absolute; /* Posicionar os círculos em relação à overlay-container */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -57,6 +58,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
+            z-index: 3; /* Acima do fundo */
         }
 
         .phase img {
@@ -82,21 +84,13 @@
             transform: translate(-50%, -50%);
             width: 25px;
             height: 25px;
-            z-index: 2;
+            z-index: 3;
         }
 
         .character {
             position: absolute;
             transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
-            z-index: 2; /* Garante que o bonequinho fique abaixo dos círculos */
-        }
-
-        .character.above {
-            top: calc(100% - 30px); /* Posição acima do círculo */
-        }
-
-        .character.below {
-            top: calc(100% + 30px); /* Posição abaixo do círculo */
+            z-index: 3; /* Garante que o bonequinho fique acima do fundo */
         }
 
         .character img {
